Update java_17.md